# testcpp

./: LICENSE  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/learn/testcpp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test1.cpp  test2.cpp  test4.cpp  testsize.cpp
app/src/main/cpp/insideObject/: 5.1.cpp  5.2.1.cpp  5.2.2.cpp  6.2.cpp  6.3.cpp  7.1.c  7.1.cpp  7.2.cpp  CMakeLists.txt
app/src/main/cpp/test2/: CMakeLists.txt  test2.cpp
app/src/main/cpp/test3/: CMakeLists.txt  test3.cpp
app/src/main/cpp/test4/: test4.cpp
app/src/main/java/com/learn/testcpp/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/learn/testcpp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
